DuPont DevSB/src/objects/Account_Material_Schedule__c.object
<CustomObject>
    <description>The object to create a bucket to hold the schedules for National Accounts-&gt;Store-&gt;Account material-&gt;Account Material Schedule for the distributors</description>
    <fields>
        <fullName>Account_Material__c</fullName>
        <label>Account-Material</label>
        <referenceTo>Account_Material__c</referenceTo>
        <relationshipLabel>Account Material Schedules</relationshipLabel>
        <relationshipName>Account_Material_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Sales__c</fullName>
        <description>This is the total sales of the related account material</description>
        <inlineHelpText>Provide Total Sales</inlineHelpText>
        <label>Total Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Account Material Schedule</label>
    <nameField>
        <label>Account Material Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Material Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>